# rust-master

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Documentation.tsx  Playground.tsx
